test/bad/nullables/op06.px

t: (Int*Char)? = 1, 'b'
t?.c
